Graph matching updates