@@ -1,4 +1,5 @@
 package fr.ign.georeden.algorithms.graph.matching;
+import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -6,12 +7,12 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.Stack;
+import java.util.stream.Collectors;
 
 import org.apache.jena.rdf.model.Model;
 import org.apache.jena.rdf.model.RDFNode;
-import org.apache.jena.rdf.model.Resource;
 import org.apache.jena.rdf.model.Statement;
-import org.apache.log4j.Logger;
+//import org.apache.log4j.Logger
 /**
  *  The <tt>DijkstraSP</tt> class represents a data type for solving the
  *  single-source shortest paths problem in edge-weighted digraphs
@@ -32,31 +33,34 @@ import org.apache.log4j.Logger;
  *  @author Kevin Wayne
  */
 
-public class DijkstraSP {
-	private static Logger logger = Logger.getLogger(DijkstraSP.class);
-    private Map<RDFNode, Double> distTo;          // distTo[v] = distance  of shortest s->v path
-    private Map<RDFNode, Statement> edgeTo;    // edgeTo[v] = last edge on shortest s->v path
-    private IndexMinPQ<Double> pq;    // priority queue of vertices
-    private List<RDFNode> nodes; // nodes of the graph
+public class DijkstraSP implements Serializable {
+	/**
+	 * 
+	 */
+	private static final long serialVersionUID = 1L;
+    private transient double weight = 1.0;
+	//private static Logger logger = Logger.getLogger(DijkstraSP.class)
+    private Map<String, Double> distTo;          // distTo[v] = distance  of shortest s->v path
+    private Map<String, StatementDijkstra> edgeTo;    // edgeTo[v] = last edge on shortest s->v path
+    private transient IndexMinPQ<Double> pq;    // priority queue of vertices
+    private transient List<String> nodes; // nodes of the graph
+    private String node;
 
     /**
      * Computes a shortest-paths tree from the source vertex <tt>s</tt> to every other
      * vertex in the edge-weighted digraph <tt>G</tt>.
      *
-     * @param  G the edge-weighted digraph
-     * @param  s the source vertex
-     * @throws IllegalArgumentException if an edge weight is negative
+     * @param graph the graph
+     * @param s the s
+     * @param nodesToVisitBeforeStop the nodes to visit before stop
      * @throws IllegalArgumentException unless 0 &le; <tt>s</tt> &le; <tt>V</tt> - 1
      */
-    public DijkstraSP(Model G, RDFNode s, Set<RDFNode> nodesToVisitBeforeStop) {
-//        for (Statement e : G.edges()) {
-//            if (e.weight() < 0)
-//                throw new IllegalArgumentException("edge " + e + " has negative weight");
-//        }
+    public DijkstraSP(Model graph, RDFNode s, Set<RDFNode> nodesToVisitBeforeStop) {
+    	node = s.toString();
     	Set<Integer> indexesToVisitBeforeStop = new HashSet<>(); // utilisées pour savoir quelle index on doit visiter avant d'arrêter
     	Set<Integer> indexesVisited = new HashSet<>(); // utilisées pour savoir quelle index on doit visiter avant d'arrêter
-    	Set<RDFNode> set = new HashSet<>(G.listSubjects().toList());
-    	set.addAll(G.listObjects().toList());
+    	Set<String> set = new HashSet<>(graph.listSubjects().toList().stream().map(m -> m.toString()).collect(Collectors.toList()));
+    	set.addAll(graph.listObjects().toList().stream().map(m -> m.toString()).collect(Collectors.toList()));
     	nodes = new ArrayList<>(set);
         distTo = new HashMap<>();
         edgeTo = new HashMap<>();
@@ -65,35 +69,65 @@ public class DijkstraSP {
             if (nodesToVisitBeforeStop.contains(nodes.get(v)))
             	indexesToVisitBeforeStop.add(v);
         }
-        distTo.put(s, 0.0);
+        distTo.put(node, 0.0);
 
         // relax vertices in order of distance from s
-        pq = new IndexMinPQ<Double>(nodes.size());
-        pq.insert(nodes.indexOf(s), distTo.get(s));
+        pq = new IndexMinPQ<>(nodes.size());
+        pq.insert(nodes.indexOf(node), distTo.get(node));
         while (!pq.isEmpty()) {
             int v = pq.delMin();
             indexesVisited.add(v);
             if (indexesVisited.containsAll(indexesToVisitBeforeStop))
             	break;
-            for (Statement e : G.listStatements((Resource)nodes.get(v), null, (RDFNode)null).toList())
+            for (Statement e : graph.listStatements(graph.getResource(nodes.get(v)), null, (RDFNode)null).toList())
                 relax(e);
         }
-
-//        // check optimality conditions
-//        assert check(G, s);
     }
-    private double weight = 1.0;
+    
+	/**
+	 * Instantiates a new Dijkstra SP.
+	 *
+	 * @param graph the graph
+	 * @param s the s
+	 */
+	public DijkstraSP(Model graph, RDFNode s) {
+    	node = s.toString();
+		Set<String> set = new HashSet<>(graph.listSubjects().toList().stream().map(m -> m.toString()).collect(Collectors.toList()));
+		set.addAll(graph.listObjects().toList().stream().map(m -> m.toString()).collect(Collectors.toList()));
+		nodes = new ArrayList<>(set);
+		distTo = new HashMap<>();
+		edgeTo = new HashMap<>();
+		for (int v = 0; v < nodes.size(); v++) {
+			distTo.put(nodes.get(v), Double.POSITIVE_INFINITY);
+		}
+		distTo.put(node, 0.0);
+
+		// relax vertices in order of distance from s
+		pq = new IndexMinPQ<>(nodes.size());
+		pq.insert(nodes.indexOf(node), distTo.get(node));
+		while (!pq.isEmpty()) {
+			int v = pq.delMin();
+			for (Statement e : graph.listStatements(graph.getResource(nodes.get(v)), null, (RDFNode) null).toList())
+				relax(e);
+		}
+	}
     // relax edge e and update pq if changed
     private void relax(Statement e) {
-        RDFNode v = e.getSubject(), w = e.getObject();
-        if (distTo.get(w) > distTo.get(v) + weight) {
-            distTo.put(w, distTo.get(v) + weight);
-            edgeTo.put(w, e);
-            if (pq.contains(nodes.indexOf(w))) pq.decreaseKey(nodes.indexOf(w), distTo.get(w));
-            else                pq.insert(nodes.indexOf(w), distTo.get(w));
+        RDFNode v = e.getSubject();
+        RDFNode w = e.getObject();
+        if (distTo.get(w.toString()) > distTo.get(v.toString()) + weight) {
+            distTo.put(w.toString(), distTo.get(v.toString()) + weight);
+            edgeTo.put(w.toString(), new StatementDijkstra(e));
+            if (pq.contains(nodes.indexOf(w.toString()))) 
+            	pq.decreaseKey(nodes.indexOf(w.toString()), distTo.get(w.toString()));
+            else
+            	pq.insert(nodes.indexOf(w.toString()), distTo.get(w.toString()));
         }
     }
 
+	public String getNode() {
+		return this.node;
+	}
     /**
      * Returns the length of a shortest path from the source vertex <tt>s</tt> to vertex <tt>v</tt>.
      * @param  v the destination vertex
@@ -101,7 +135,7 @@ public class DijkstraSP {
      *         <tt>Double.POSITIVE_INFINITY</tt> if no such path
      */
     public double distTo(RDFNode v) {
-        return distTo.get(v);
+        return distTo.get(v.toString());
     }
 
     /**
@@ -112,108 +146,61 @@ public class DijkstraSP {
      *         <tt>s</tt> to vertex <tt>v</tt>; <tt>false</tt> otherwise
      */
     public boolean hasPathTo(RDFNode v) {
-        return distTo.get(v) < Double.POSITIVE_INFINITY;
+        return distTo.get(v.toString()) < Double.POSITIVE_INFINITY;
     }
 
     /**
      * Returns a shortest path from the source vertex <tt>s</tt> to vertex <tt>v</tt>.
      *
-     * @param  v the destination vertex
+     * @param v the v
+     * @param graph the graph
      * @return a shortest path from the source vertex <tt>s</tt> to vertex <tt>v</tt>
      *         as an iterable of edges, and <tt>null</tt> if no such path
      */
-    public Iterable<Statement> pathTo(RDFNode v) {
+    public Iterable<Statement> pathTo(RDFNode v, Model graph) {
         if (!hasPathTo(v)) 
         	return null;
         Stack<Statement> path = new Stack<>();
-        for (Statement e = edgeTo.get(v); e != null; e = edgeTo.get(e.getSubject())) {
-            path.push(e);
+        for (StatementDijkstra e = edgeTo.get(v.toString()); e != null; e = edgeTo.get(e.getSubject())) {
+            path.push(e.toStatement(graph));
         }
         return path;
     }
-
-
-    // check optimality conditions:
-    // (i) for all edges e:            distTo[e.to()] <= distTo[e.from()] + e.weight()
-    // (ii) for all edge e on the SPT: distTo[e.to()] == distTo[e.from()] + e.weight()
-    private boolean check(Model G, RDFNode s) {
-
-//        // check that edge weights are nonnegative
-//        for (Statement e : G.edges()) {
-//            if (e.weight() < 0) {
-//                System.err.println("negative edge weight detected");
-//                return false;
-//            }
-//        }
-
-        // check that distTo[v] and edgeTo[v] are consistent
-        if (distTo.get(s) != 0.0 || edgeTo.get(s) != null) {
-            logger.error("distTo[s] and edgeTo[s] inconsistent");
-            return false;
-        }
-        for (int v = 0; v < nodes.size(); v++) {
-            if (nodes.get(v) == s) 
-            	continue;
-            if (edgeTo.get(nodes.get(v)) == null && distTo.get(nodes.get(v)) != Double.POSITIVE_INFINITY) {
-            	logger.error("distTo[] and edgeTo[] inconsistent");
-                return false;
-            }
-        }
-
-        // check that all edges e = v->w satisfy distTo[w] <= distTo[v] + e.weight()
-        for (int v = 0; v < nodes.size(); v++) {
-            for (Statement e : G.listStatements((Resource)nodes.get(v), null, (RDFNode)null).toList()) {
-                RDFNode w = e.getObject();
-                if (distTo.get(nodes.get(v)) + weight < distTo.get(w)) {
-                    logger.error("edge " + e + " not relaxed");
-                    return false;
-                }
-            }
-        }
-
-        // check that all edges e = v->w on SPT satisfy distTo[w] == distTo[v] + e.weight()
-        for (int w = 0; w < nodes.size(); w++) {
-            if (edgeTo.get(nodes.get(w)) == null) 
-            	continue;
-            Statement e = edgeTo.get(nodes.get(w));
-            RDFNode v = e.getSubject();
-            if (nodes.get(w) != e.getObject()) 
-            	return false;
-            if (distTo.get(v) + weight != distTo.get(nodes.get(w))) {
-                logger.error("edge " + e + " on shortest path not tight");
-                return false;
-            }
-        }
-        return true;
+    
+    public class StatementDijkstra implements Serializable {
+    	/**
+		 * 
+		 */
+		private static final long serialVersionUID = 1L;
+		private String subject;
+    	private String predicate;
+    	private String object;
+    	
+    	public StatementDijkstra(Statement s) {
+    		this.subject = s.getSubject().toString();
+    		this.predicate = s.getPredicate().toString();
+    		this.object = s.getObject().toString();
+    	}
+    	
+    	/**
+	     * To statement.
+	     *
+	     * @param graph the graph
+	     * @return the statement
+	     */
+	    public Statement toStatement(Model graph) {
+    		return graph.createStatement(graph.getResource(subject), graph.getProperty(predicate), graph.getResource(object));
+    	}
+    	public String getSubject() {
+    		return this.subject;
+    	}
+    	public String getPredicate() {
+    		return this.predicate;
+    	}
+    	public String getObject() {
+    		return this.object;
+    	}
     }
-
-
-//    /**
-//     * Unit tests the <tt>DijkstraSP</tt> data type.
-//     */
-//    public static void main(String[] args) {
-//        //System.in in = new In(args[0]);
-//        EdgeWeightedDigraph G = new EdgeWeightedDigraph(in);
-//        int s = Integer.parseInt(args[1]);
-//
-//        // compute shortest paths
-//        DijkstraSP sp = new DijkstraSP(G, s);
-//
-//
-//        // print shortest path
-//        for (int t = 0; t < nodes.size(); t++) {
-//            if (sp.hasPathTo(t)) {
-//                logger.info(String.format("%d to %d (%.2f)  ", s, t, sp.distTo(t)));
-//                for (DirectedEdge e : sp.pathTo(t)) {
-//                	logger.print(e + "   ");
-//                }
-//                logger.info("");
-//            }
-//            else {
-//            	logger.info(String.format("%d to %d         no path\n", s, t));
-//            }
-//        }
-//    }
 
 }
 
